modules/gdscript/tests/scripts/parser/errors/unexpected_token_in_class_body.gd
# GH-96792

var error
error = true

func test():
	pass
